--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/MailberryForm.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npx webpack --mode production",
-    "dev": "webpack --mode development --watch"
+    "build": "tsc",
+    "dev": "tsc --watch"
   },
   "repository": {
     "type": "git",
@@ -23,17 +23,12 @@
   },
   "homepage": "https://github.com/AIMailer/mailberry-forms-react#readme",
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": ">17.0.0 <19.0.0",
+    "react-dom": ">17.0.0 <19.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "babel-loader": "^9.1.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.0",
