--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES6",
     "module": "ESNext",
-    "lib": ["DOM", "ES2015"], // Include DOM and latest ES features
+    "lib": ["DOM", "ESNext"],
     "allowJs": true, // Allow JavaScript files to be compiled
+    "rootDir": "./src",
+    "strict": true,
+    "noImplicitReturns": true,
     "esModuleInterop": true, // Enables compatibility with Babel imports
     "allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export
     "forceConsistentCasingInFileNames": true, // Disallow inconsistently-cased references to the same file
@@ -11,7 +13,6 @@
     "resolveJsonModule": true, // Include modules imported with '.json' extension
     "isolatedModules": true, // Ensures each file can be safely transpiled without relying on other imports
     "jsx": "react-jsx",
-    "baseUrl": "./", // Base directory to resolve non-relative module names
     "outDir": "./dist", // Output directory for compiled files
     "declaration": true, // Generates corresponding '.d.ts' file
     "sourceMap": true, // Generates corresponding '.map' file
@@ -19,7 +20,6 @@
     "skipLibCheck": true,
     "stripInternal": true,
     "resolvePackageJsonExports": true,
-    "strict": false, // Enable all strict type-checking options
   },
   "include": [
     // compile all files with typescript extensions inside src directory
