--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,29 @@
 // Read: https://www.typescriptlang.org/docs/handbook/modules/guides/choosing-compiler-options.html#im-writing-a-library
+// https://medium.com/bbc-product-technology/solving-the-problem-with-npm-link-and-react-hooks-266c832dd019
 
 {
+  "include": ["src"],
+  "exclude": [
+    "dist",
+    "node_modules"
+  ],
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-    "outDir": "dist",
-
-    // Bundler mode 
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true, // Ensures each file can be safely transpiled without relying on other imports
-    "jsx": "react-jsx",
-    "allowSyntheticDefaultImports": true,
-
-    // Linting
+    "module": "esnext",
+    "lib": ["dom", "esnext"],
+    "importHelpers": true,
+    "declaration": true,
+    "sourceMap": true,
+    "rootDir": "./src",
+    "outDir": "./dist",
     "strict": true,
     "noImplicitReturns": true,
-    "noImplicitAny": true,
-    "declaration": true, // Generates corresponding '.d.ts' file
-
-    // "esModuleInterop": true, // Enables compatibility with Babel imports
-    // "allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export
-    // "forceConsistentCasingInFileNames": true, // Disallow inconsistently-cased references to the same file
-    // "outDir": "./dist", // Output directory for compiled files
-    // "sourceMap": true, // Generates corresponding '.map' file
-    // "removeComments": false, // Do not emit comments to output
-    // "stripInternal": true,
-    // "noPropertyAccessFromIndexSignature": true,
-  },
-  "include": [
-    // compile all files with typescript extensions inside src directory
-    "src/**/*.ts",
-    "src/**/*.tsx",
-  ],
-  "exclude": ["node_modules"] // Exclude these directories from compilation
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "moduleResolution": "node",
+    "jsx": "react",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+  }
 }
