--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": ">=17.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.17",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "react": "^18.2.0",
